--- a/life_simulator/src/Frontend/HTML/life_simulator.html
+++ b/life_simulator/src/Frontend/HTML/life_simulator.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friendship simulator</title>
+    <title>Life simulator</title>
 </head>
 <body>
+  <header>
+    <div class="flex-container" id="whole_navigation-bar">
+      <div class="flex-container" id="inner_navigation-bar">
+        <div id="home" class="flex-item">
+          <h3>
+            <a href="{{ url_for('Home') }}" id="nav-link-home" class="nav-link">Home</a>
+          </h3>
+        </div>
+        <div id="work" class="flex-item">
+          <h3>
+            <a href="{{ url_for('Work') }}" id="nav-link-work" class="nav-link">Play game</a>
+          </h3>
+        </div>
+        <div id="about" class="flex-item">
+          <h3>
+            <a href="{{ url_for('About') }}" id="nav-link-about" class="nav-link">About</a>
+          </h3>
+        </div>
+      </div>
+    </div>
+  </header>
     
 </body>
 </html>
