Made some changes to the HTML files.

--- a/life_simulator/src/Frontend/HTML/Main_page.html
+++ b/life_simulator/src/Frontend/HTML/Main_page.html
@@ -11,22 +11,28 @@
       <div class="flex-container" id="inner_navigation-bar">
         <div id="home" class="flex-item">
           <h3>
-            <a href="{{ url_for('Home') }}" id="nav-link-home" class="nav-link">Home</a>
+            <a href="/home/sandyran/Git/friendship_simulator/life_simulator/src/Frontend/HTML/Main_page.html" id="nav-link-home" class="nav-link">Home</a>
           </h3>
         </div>
         <div id="work" class="flex-item">
           <h3>
-            <a href="{{ url_for('Work') }}" id="nav-link-work" class="nav-link">Play game</a>
+            <a href="/home/sandyran/Git/friendship_simulator/life_simulator/src/Frontend/HTML/Game_page.html" id="nav-link-work" class="nav-link">Play game</a>
           </h3>
         </div>
         <div id="about" class="flex-item">
           <h3>
-            <a href="{{ url_for('About') }}" id="nav-link-about" class="nav-link">About</a>
+            <a href="/home/sandyran/Git/friendship_simulator/life_simulator/src/Frontend/HTML/About_page.html" id="nav-link-about" class="nav-link">About</a>
           </h3>
         </div>
       </div>
     </div>
   </header>
-    
+  <footer>
+    <div class="copyright">
+        <p>
+            © 2025 Benjamin Andreas Vraspillai. All rights reserved.
+        </p>
+    </div>
+  </footer>
 </body>
 </html>
